Project1/force-app/main/default/objects/Package__c/fields/Addressor__c.field-meta.xml
<CustomField>
    <fullName>Addressor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Addressor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Packages (Addressor)</relationshipLabel>
    <relationshipName>Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>