Project1/force-app/main/default/objects/Package__c/fields/Package_value__c.field-meta.xml
<CustomField>
    <fullName>Package_value__c</fullName>
    <label>Package value</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>