Project1/force-app/main/default/objects/Package__c/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Return Contact and Address.</description>
    <label>Return</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Packages (Return)</relationshipLabel>
    <relationshipName>Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>