Project1/force-app/main/default/objects/Package__c/fields/Return_Address__c.field-meta.xml
<CustomField>
    <fullName>Return_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Packages (Return Address)</relationshipLabel>
    <relationshipName>Packages1</relationshipName>
    <type>Lookup</type>
</CustomField>