Project1/force-app/main/default/objects/Package__c/fields/Tracking_ID__c.field-meta.xml
<CustomField>
    <fullName>Tracking_ID__c</fullName>
    <displayFormat>M-{0000000000}</displayFormat>
    <label>Tracking ID</label>
    <type>AutoNumber</type>
</CustomField>