Project1/force-app/main/default/objects/Package__c/recordTypes/Delivered.recordType-meta.xml
<RecordType>
    <fullName>Delivered</fullName>
    <active>true</active>
    <description>These packages have been delivered unless specified by customer support</description>
    <label>Delivered</label>
</RecordType>