Project1/force-app/main/default/objects/Package__c/recordTypes/Missing.recordType-meta.xml
<RecordType>
    <fullName>Missing</fullName>
    <active>true</active>
    <description>These packages have been declared missing by customer support</description>
    <label>Missing</label>
</RecordType>