Project1/force-app/main/default/objects/Package__c/listViews/Approval_process_queue_Package.listView-meta.xml
<ListView>
    <fullName>Approval_process_queue_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval queue step1</label>
    <queue>Approval_queue_step1</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>