Project1/force-app/main/default/objects/Package__c/listViews/Approval_queue_step2_Package.listView-meta.xml
<ListView>
    <fullName>Approval_queue_step2_Package</fullName>
    <filterScope>Queue</filterScope>
    <label>Approval queue step2</label>
    <queue>Approval_queue_step2</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>